<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".Factorialcalc">

    <TextView
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="78dp"
        android:layout_marginTop="20dp"
        android:text="@string/factorial_app3"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        android:layout_marginRight="78dp"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="151dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/calculate3"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="231dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="206dp"
        android:text="@string/result"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="322dp" />

</RelativeLayout>